adds view/controller talking, yay

--- a/testboard.html
+++ b/testboard.html
@@ -1,93 +1,65 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
-  <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-
-
-  <script src="../board.js"></script>
-  <script src="view.js"></script>
-
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-
+  <title></title>
 </head>
 <body>
-
-<div class="board">
-
-  <div id="column">
+  <div id="container0" class="container">
     <div class="empty"></div>
     <div class="empty"></div>
-    <div class="empty"></div>
-    <div class="empty"></div>
-    <div class="empty"></div>
-    <div class="empty"></div>
-    <button></button>
+    <div class="red"></div>
+    <div class="red"></div>
+    <div class="red"></div>
+    <div class="red"></div>
   </div>
-
-  <div id="column">
+  <div id="container1" class="container">
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
-    <button></button>
   </div>
-
-  <div id="column">
+  <div id="container2" class="container">
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
-    <button></button>
   </div>
-
-  <div id="column">
+  <div id="container3" class="container">
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
-    <button></button>
   </div>
-
-  <div id="column">
+  <div id="container4" class="container">
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
-    <button></button>
   </div>
-
-  <div id="column">
+  <div id="container5" class="container">
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
-    <button></button>
   </div>
-
-  <div id="column">
+  <div id="container6" class="container">
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
-    <button></button>
   </div>
-</div>
-<!-- <div class="feet"></div> -->
-<!-- <img src = "http://24.media.tumblr.com/tumblr_ljgxm89DnS1qdmv0so1_500.gif"> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script type="text/javascript" src="backend.js"></script>
 </body>
-
 </html>
