Add win to view and reset button

--- a/testboard.html
+++ b/testboard.html
@@ -59,6 +59,9 @@
     <div class="empty"></div>
     <div class="empty"></div>
   </div>
+  <div class="win">
+    <img src="http://24.media.tumblr.com/tumblr_ljgxm89DnS1qdmv0so1_500.gif">
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="backend.js"></script>
 </body>
